<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/optimized_light_purple_pink_blurred_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.umsl.quizlet.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:padding="50dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_great_minds_logo"
        />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="GREAT MINDS"
    android:textSize="24dp"
    android:textColor="@color/white"
    android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:hint="@string/userID"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/empty"
            android:textColorHint="@color/hint_color" />


        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@string/empty"
                    android:textColorHint="@color/black" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>-->

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button"
            android:elevation="40dp"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
