<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.umsl.quizlet.ProfilePageActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:background="@drawable/optimized_light_purple_pink_blurred_background"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/person_icon"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:textColor="@color/icons"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryLight"
            android:onClick="deleteUser"
            android:text="@string/logout" />


    </LinearLayout>
    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <LinearLayout
            android:id="@+id/myClassesTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryText"
                android:layout_margin="10dp"
                android:text="@string/my_classes"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/hintTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hint_tap_class_to_start_a_quiz"/>

    </LinearLayout>

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/myClassesTextLayout"
            android:layout_above="@id/hintTextLayout"/>


     <!--   <Button
            android:id="@+id/group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/group"
            android:onClick="showGroup"/>-->

    </RelativeLayout>


    <!--<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openStartQuiz"
        android:text="@string/start_new_quiz"
        />-->


</LinearLayout>